// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailWidget renders a inline widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 kuOprO"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 ihVIAm"
      >
        <span
          class="StyledText-sc-1sadyjn-0 biMlWM sc-eSRwjH jBSQhy"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 bsPEqS"
      >
        <span
          class="StyledText-sc-1sadyjn-0 giPNPf"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailWidget renders a simple widget 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-iCoGMd hFJToB"
  >
    <div
      aria-label="Some widget"
      class="StyledBox-sc-13pk1d4-0 kuOprO"
    >
      <header
        class="StyledBox-sc-13pk1d4-0 bbIfdU"
      >
        <span
          class="StyledText-sc-1sadyjn-0 biMlWM sc-eSRwjH jBSQhy"
        >
          Some widget
        </span>
      </header>
      <div
        class="StyledBox-sc-13pk1d4-0 bsPEqS"
      >
        <span
          class="StyledText-sc-1sadyjn-0 giPNPf"
        >
          Some content
        </span>
      </div>
    </div>
  </div>
</div>
`;
